--- a/css/output.css
+++ b/css/output.css
@@ -476,6 +476,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   position: fixed;
 }
 
+.relative {
+  position: relative;
+}
+
 .left-0 {
   left: 0px;
 }
@@ -564,6 +568,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 100%;
 }
 
+.w-\[280px\] {
+  width: 280px;
+}
+
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -604,8 +612,28 @@ Ensure the default browser behavior of the `hidden` attribute.
   gap: 0.75rem;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-6 {
+  gap: 1.5rem;
+}
+
+.gap-8 {
+  gap: 2rem;
+}
+
+.gap-9 {
+  gap: 2.25rem;
+}
+
 .rounded-lg {
   border-radius: 0.5rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .border-\[1px\] {
@@ -639,6 +667,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding: 0.5rem;
 }
 
+.p-1 {
+  padding: 0.25rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -647,6 +679,16 @@ Ensure the default browser behavior of the `hidden` attribute.
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .pt-8 {
@@ -659,6 +701,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .pb-0 {
   padding-bottom: 0px;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
+.pt-12 {
+  padding-top: 3rem;
 }
 
 .font-\[\'Orbitron\'\] {
@@ -674,6 +724,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1;
 }
 
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -684,8 +739,26 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1.75rem;
 }
 
+.text-\[100\%\] {
+  font-size: 100%;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
 .font-bold {
   font-weight: 700;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .text-white {
@@ -696,6 +769,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.shadow-inner {
+  --tw-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: inset 0 2px 4px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 /* html { */
@@ -867,6 +946,15 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
 }
 
+.animation-mark-pulse-option {
+  -webkit-animation-name: mark-pulse;
+          animation-name: mark-pulse;
+  -webkit-animation-duration: 0.7s;
+          animation-duration: 0.7s;
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s;
+}
+
 .animation-mark-pulse {
   -webkit-animation-name: mark-pulse;
           animation-name: mark-pulse;
@@ -940,6 +1028,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   gap: 1rem;
 }
 
+.before\:content-\[\'\25B6_\'\]::before {
+  --tw-content: '▶ ';
+  content: var(--tw-content);
+}
+
 .after\:content-\[\'_\(x\)\'\]::after {
   --tw-content: ' (x)';
   content: var(--tw-content);
@@ -950,10 +1043,116 @@ Ensure the default browser behavior of the `hidden` attribute.
   content: var(--tw-content);
 }
 
-@media (min-width: 640px) {
-  .sm\:text-\[9rem\] {
-    font-size: 9rem;
-  }
+.placeholder-shown\:bg-white:-moz-placeholder-shown {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.placeholder-shown\:bg-white:-ms-input-placeholder {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.placeholder-shown\:bg-white:placeholder-shown {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.valid\:bg-white:valid {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.invalid\:border-red-500:invalid {
+  --tw-border-opacity: 1;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity));
+}
+
+.invalid\:bg-red-300:invalid {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}
+
+.invalid\:bg-red-200:invalid {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
+}
+
+.placeholder-shown\:invalid\:bg-red-300:invalid:-moz-placeholder-shown {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}
+
+.placeholder-shown\:invalid\:bg-red-300:invalid:-ms-input-placeholder {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}
+
+.placeholder-shown\:invalid\:bg-red-300:invalid:placeholder-shown {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}
+
+.hover\:cursor-pointer:hover {
+  cursor: pointer;
+}
+
+.hover\:font-bold:hover {
+  font-weight: 700;
+}
+
+.hover\:before\:content-\[\'\25B6_\'\]:hover::before {
+  --tw-content: '▶ ';
+  content: var(--tw-content);
+}
+
+.peer:required ~ .peer-required\:after\:absolute::after {
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.peer:required ~ .peer-required\:after\:top-\[-65px\]::after {
+  content: var(--tw-content);
+  top: -65px;
+}
+
+.peer:required ~ .peer-required\:after\:left-\[215px\]::after {
+  content: var(--tw-content);
+  left: 215px;
+}
+
+.peer:required ~ .peer-required\:after\:rounded-md::after {
+  content: var(--tw-content);
+  border-radius: 0.375rem;
+}
+
+.peer:required ~ .peer-required\:after\:py-\[4px\]::after {
+  content: var(--tw-content);
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+
+.peer:required ~ .peer-required\:after\:px-2::after {
+  content: var(--tw-content);
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.peer:required ~ .peer-required\:after\:text-xs::after {
+  content: var(--tw-content);
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.peer:required ~ .peer-required\:after\:text-white::after {
+  content: var(--tw-content);
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.peer:required ~ .peer-required\:after\:content-\[\'required\'\]::after {
+  --tw-content: 'required';
+  content: var(--tw-content);
 }
 
 @media (min-width: 768px) {
@@ -997,11 +1196,6 @@ Ensure the default browser behavior of the `hidden` attribute.
     grid-row-end: 2;
   }
 
-  .md\:mx-auto {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
   .md\:grid-cols-\[1fr_3fr_1fr\] {
     grid-template-columns: 1fr 3fr 1fr;
   }
@@ -1014,35 +1208,39 @@ Ensure the default browser behavior of the `hidden` attribute.
     flex-direction: column;
   }
 
-  .md\:px-16 {
-    padding-left: 4rem;
-    padding-right: 4rem;
+  .md\:pt-8 {
+    padding-top: 2rem;
   }
 
-  .md\:px-\[80px\] {
-    padding-left: 80px;
-    padding-right: 80px;
+  .md\:text-\[9rem\] {
+    font-size: 9rem;
   }
 
-  .md\:px-\[100px\] {
-    padding-left: 100px;
-    padding-right: 100px;
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
-  .md\:px-\[10\%\] {
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .md\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:text-\[12rem\] {
+    font-size: 12rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:px-\[10\%\] {
     padding-left: 10%;
     padding-right: 10%;
-  }
-
-  .md\:pl-0 {
-    padding-left: 0px;
-  }
-
-  .md\:text-\[13rem\] {
-    font-size: 13rem;
-  }
-
-  .md\:text-\[12rem\] {
-    font-size: 12rem;
   }
 }
